2007-05-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (revolver.d.d) : added
	* interfaces/R/src/rinterface.c (R_igraph_revolver_d_d) : added

2007-05-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R : evolver.* renamed to revolver.*
	* interfaces/R/src/rinterface.c : R_igraph_evolver_* renamed to
	R_igraph_revolver_*

2007-05-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (vertex.connectivity, edge.connectivity)
	(graph.cohesion, graph.adhesion) : added 'checks' argument
	* interfaces/R/src/rinterface.c (R_igraph_vertex_connectivity)
	(R_igraph_edge_connectivity, R_igraph_cohesion, R_igraph_adhesion) :
	updated

	* interfaces/R/igraph/R/structural.properties.R (girth) : added
	* interfaces/R/src/rinterface.c (R_igraph_girth) : added

	* interfaces/R/igraph/R/print.R (print.igraph) : format edge list better

	* interfaces/R/igraph/R/print.R (print.igraph) : handle 
	getOption("max.print")

	* interfaces/R/igraph/R/plot.R (plot.igraph)
	* interfaces/R/igraph/R/tkplot.R (tkplot, tkplot.fit.to.screen) :
	better margin

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) : arrow head size
	depends on edge width now

	* interfaces/R/igraph/R/plot.R (igraph.Arrows) : code argument
	reimplemented, now works properly even if lty!=1 & arrow.mode=3

	* interfaces/R/igraph/R/tkplot.R (tkplot, i.tkplot.get.edge.lty) :
	the latter was added

	* interfaces/R/igraph/R/plot.common.R (i.get.edge.lty) : removed

	* interfaces/R/igraph/R/plot.R (plot.igraph) : some simplification, 
	we don't need to plot arrow heads separately if lty!=1 any more

	* interfaces/R/igraph/R/plot.R (plot.igraph) : edge width bug for 
	edges without an arrow corrected

2007-05-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : a loop plotting bug 
	corrected

	* interfaces/R/igraph/R/plot.R (plot.igraph) : plot better looking edges
	(igraph.Arrow) : added
