@@ -7235,6 +7235,42 @@ SEXP R_igraph_revolver_d_d(SEXP graph, SEXP pniter, SEXP pvtime, SEXP petime,
   UNPROTECT(2);
   return result;
 }
+
+int R_igraph_evolver_d(SEXP pnodes, SEXP pkernel, SEXP poutseq, 
+		       SEXP poutdist, SEXP pm, SEXP pdirected) {
+  
+  igraph_t g;
+  igraph_integer_t nodes=REAL(pnodes)[0];
+  igraph_vector_t kernel;
+  igraph_vector_t voutseq, *ppoutseq=0;
+  igraph_vector_t voutdist, *ppoutdist=0;
+  igraph_integer_t m=REAL(pm)[0];
+  igraph_bool_t directed=LOGICAL(pdirected)[0];
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_vector(pkernel, &kernel);
+  if (!isNull(poutseq)) {
+    R_SEXP_to_vector(poutseq, &voutseq);
+    ppoutseq=&voutseq;
+  }
+  if (!isNull(poutdist)) {
+    R_SEXP_to_vector(poutdist, &voutdist);
+    ppoutdist=&voutdist;
+  }
+  
+  igraph_evolver_d(&g, nodes, &kernel, ppoutseq, ppoutdist, m, directed);
+  PROTECT(result=R_igraph_to_SEXP(&g));
+  igraph_destroy(&g);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+		   
+		   
 			 
 /***********************************************/
 /* THE REST IS GENERATED BY inger.py           */
