@@ -1,5 +1,8 @@
 2007-05-09  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/revolver.R (evolver.d) : added
+	* interfaces/R/src/rinterface.c (R_igraph_evolver_d) : added
+
 	* interfaces/R/igraph/R/revolver.R (revolver.d.d) : added
 	* interfaces/R/src/rinterface.c (R_igraph_revolver_d_d) : added
 
